[project]
name = "cross-platform-controller-mapper"
version = "2.0.0"
description = "Cross-platform controller mapping tool with CodeUChain architecture"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "JoshuaWink"}
]
keywords = ["controller", "mapper", "gamepad", "accessibility", "macos", "cross-platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities"
]

dependencies = [
    # ─── Core Framework ───
    "codeuchain>=1.0.0",
    
    # ─── Controller Input ───
    "pygame>=2.5.0",
    
    # ─── Keyboard/Mouse Control ───
    "pynput>=1.7.6",
    "pyautogui>=0.9.54",
    
    # ─── Platform-Specific ───
    "pync>=2.0.3; sys_platform == 'darwin'",  # macOS notifications
    
    # ─── Audio (for voice features) ───
    "pyaudio>=0.2.13",
    "webrtcvad>=2.0.10",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    # ─── Testing ───
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    
    # ─── Code Quality ───
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    
    # ─── Documentation ───
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

gui = [
    # ─── GUI (Future) ───
    "kivy>=2.2.0",
]

all = [
    "cross-platform-controller-mapper[dev,gui]",
]

[project.scripts]
controller-mapper = "controller_mapper.entry.cli:main"

[project.urls]
Homepage = "https://github.com/JoshuaWink/Cross-Platform-Controller-Mapper"
Repository = "https://github.com/JoshuaWink/Cross-Platform-Controller-Mapper"
Issues = "https://github.com/JoshuaWink/Cross-Platform-Controller-Mapper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/controller_mapper"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/config.json",
    "/layout__ps4.json",
    "/mappings.json",
]

# ─── Tool Configuration ───

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--cov=controller_mapper",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src/controller_mapper"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["controller_mapper"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = []

[[tool.mypy.overrides]]
module = [
    "pygame.*",
    "pynput.*",
    "pyautogui.*",
    "pync.*",
    "webrtcvad.*",
]
ignore_missing_imports = true
